// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hero card > matches the expanded layout snapshot, with skills, artifacts and backpack 1`] = `
{
  "height": 804,
  "ops": [
    {
      "height": 186,
      "kind": "panel",
      "panel": "hero",
      "width": 194,
      "x": 0,
      "y": 0,
    },
    {
      "height": 64,
      "kind": "sprite",
      "src": "assets/heroes/large/196.png",
      "width": 58,
      "x": 6,
      "y": 6,
    },
    {
      "align": "left",
      "colour": "yellow",
      "font": "big",
      "kind": "text",
      "maxWidth": 118,
      "text": "Todd",
      "x": 70,
      "y": 8,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "medium",
      "kind": "text",
      "text": "Level 22",
      "x": 70,
      "y": 34,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 118,
      "text": "Artificer",
      "x": 70,
      "y": 48,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/primary/attack.png",
      "width": 32,
      "x": 15,
      "y": 78,
    },
    {
      "align": "center",
      "colour": "gold",
      "font": "small",
      "kind": "text",
      "text": "26",
      "x": 31,
      "y": 112,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/primary/defense.png",
      "width": 32,
      "x": 59,
      "y": 78,
    },
    {
      "align": "center",
      "colour": "gold",
      "font": "small",
      "kind": "text",
      "text": "25",
      "x": 75,
      "y": 112,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/primary/power.png",
      "width": 32,
      "x": 103,
      "y": 78,
    },
    {
      "align": "center",
      "colour": "gold",
      "font": "small",
      "kind": "text",
      "text": "25",
      "x": 119,
      "y": 112,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/primary/knowledge.png",
      "width": 32,
      "x": 147,
      "y": 78,
    },
    {
      "align": "center",
      "colour": "gold",
      "font": "small",
      "kind": "text",
      "text": "26",
      "x": 163,
      "y": 112,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/creatures/13.png",
      "width": 24,
      "x": 7,
      "y": 130,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "3",
      "x": 19,
      "y": 156,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/creatures/110.png",
      "width": 24,
      "x": 33,
      "y": 130,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "15",
      "x": 45,
      "y": 156,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/creatures/116.png",
      "width": 24,
      "x": 59,
      "y": 130,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "8",
      "x": 71,
      "y": 156,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/creatures/118.png",
      "width": 24,
      "x": 85,
      "y": 130,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "4",
      "x": 97,
      "y": 156,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/creatures/120.png",
      "width": 24,
      "x": 111,
      "y": 130,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "2",
      "x": 123,
      "y": 156,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/creatures/127.png",
      "width": 24,
      "x": 137,
      "y": 130,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "1",
      "x": 149,
      "y": 156,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/creatures/131.png",
      "width": 24,
      "x": 163,
      "y": 130,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "1",
      "x": 175,
      "y": 156,
    },
    {
      "height": 618,
      "kind": "panel",
      "panel": "expansion",
      "width": 194,
      "x": 0,
      "y": 186,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Movement 1500 / 1500",
      "x": 16,
      "y": 204,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Mana 27 / 390",
      "x": 16,
      "y": 218,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Experience 132486",
      "x": 16,
      "y": 232,
    },
    {
      "align": "left",
      "colour": "yellow",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Skills",
      "x": 16,
      "y": 250,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/skills/7_3.png",
      "width": 32,
      "x": 20,
      "y": 264,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/skills/19_2.png",
      "width": 32,
      "x": 60,
      "y": 264,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/skills/22_3.png",
      "width": 32,
      "x": 100,
      "y": 264,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/skills/23_3.png",
      "width": 32,
      "x": 140,
      "y": 264,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/skills/14_1.png",
      "width": 32,
      "x": 20,
      "y": 298,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/skills/25_2.png",
      "width": 32,
      "x": 60,
      "y": 298,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/skills/21_3.png",
      "width": 32,
      "x": 100,
      "y": 298,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/skills/2_2.png",
      "width": 32,
      "x": 140,
      "y": 298,
    },
    {
      "align": "left",
      "colour": "yellow",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Artifacts",
      "x": 16,
      "y": 336,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/12.png",
      "width": 44,
      "x": 20,
      "y": 350,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/4.png",
      "width": 44,
      "x": 72,
      "y": 350,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/32.png",
      "width": 44,
      "x": 124,
      "y": 350,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/7.png",
      "width": 44,
      "x": 20,
      "y": 396,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/18.png",
      "width": 44,
      "x": 72,
      "y": 396,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/23.png",
      "width": 44,
      "x": 124,
      "y": 396,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/120.png",
      "width": 44,
      "x": 20,
      "y": 442,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/121.png",
      "width": 44,
      "x": 72,
      "y": 442,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/26.png",
      "width": 44,
      "x": 124,
      "y": 442,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/9.png",
      "width": 44,
      "x": 20,
      "y": 488,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/10.png",
      "width": 44,
      "x": 72,
      "y": 488,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/44.png",
      "width": 44,
      "x": 124,
      "y": 488,
    },
    {
      "height": 44,
      "kind": "sprite",
      "src": "assets/artifacts/143.png",
      "width": 44,
      "x": 20,
      "y": 534,
    },
    {
      "align": "left",
      "colour": "yellow",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Backpack (37)",
      "x": 16,
      "y": 584,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/5.png",
      "width": 24,
      "x": 17,
      "y": 598,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/7.png",
      "width": 24,
      "x": 43,
      "y": 598,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/122.png",
      "width": 24,
      "x": 69,
      "y": 598,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/31.png",
      "width": 24,
      "x": 95,
      "y": 598,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/33.png",
      "width": 24,
      "x": 121,
      "y": 598,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/60.png",
      "width": 24,
      "x": 147,
      "y": 598,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/61.png",
      "width": 24,
      "x": 17,
      "y": 624,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/62.png",
      "width": 24,
      "x": 43,
      "y": 624,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/63.png",
      "width": 24,
      "x": 69,
      "y": 624,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/64.png",
      "width": 24,
      "x": 95,
      "y": 624,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/88.png",
      "width": 24,
      "x": 121,
      "y": 624,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/90.png",
      "width": 24,
      "x": 147,
      "y": 624,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/91.png",
      "width": 24,
      "x": 17,
      "y": 650,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/92.png",
      "width": 24,
      "x": 43,
      "y": 650,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/93.png",
      "width": 24,
      "x": 69,
      "y": 650,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/110.png",
      "width": 24,
      "x": 95,
      "y": 650,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/111.png",
      "width": 24,
      "x": 121,
      "y": 650,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/112.png",
      "width": 24,
      "x": 147,
      "y": 650,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/113.png",
      "width": 24,
      "x": 17,
      "y": 676,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/114.png",
      "width": 24,
      "x": 43,
      "y": 676,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/115.png",
      "width": 24,
      "x": 69,
      "y": 676,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/116.png",
      "width": 24,
      "x": 95,
      "y": 676,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/117.png",
      "width": 24,
      "x": 121,
      "y": 676,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/118.png",
      "width": 24,
      "x": 147,
      "y": 676,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/119.png",
      "width": 24,
      "x": 17,
      "y": 702,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/125.png",
      "width": 24,
      "x": 43,
      "y": 702,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/126.png",
      "width": 24,
      "x": 69,
      "y": 702,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/127.png",
      "width": 24,
      "x": 95,
      "y": 702,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/128.png",
      "width": 24,
      "x": 121,
      "y": 702,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/129.png",
      "width": 24,
      "x": 147,
      "y": 702,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/130.png",
      "width": 24,
      "x": 17,
      "y": 728,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/131.png",
      "width": 24,
      "x": 43,
      "y": 728,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/132.png",
      "width": 24,
      "x": 69,
      "y": 728,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/133.png",
      "width": 24,
      "x": 95,
      "y": 728,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/140.png",
      "width": 24,
      "x": 121,
      "y": 728,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/141.png",
      "width": 24,
      "x": 147,
      "y": 728,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/artifacts/142.png",
      "width": 24,
      "x": 17,
      "y": 754,
    },
  ],
  "width": 194,
}
`;

exports[`hero card > matches the layout snapshot 1`] = `
{
  "height": 186,
  "ops": [
    {
      "height": 186,
      "kind": "panel",
      "panel": "hero",
      "width": 194,
      "x": 0,
      "y": 0,
    },
    {
      "height": 64,
      "kind": "sprite",
      "src": "assets/heroes/large/196.png",
      "width": 58,
      "x": 6,
      "y": 6,
    },
    {
      "align": "left",
      "colour": "yellow",
      "font": "big",
      "kind": "text",
      "maxWidth": 118,
      "text": "Todd",
      "x": 70,
      "y": 8,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "medium",
      "kind": "text",
      "text": "Level 22",
      "x": 70,
      "y": 34,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 118,
      "text": "Artificer",
      "x": 70,
      "y": 48,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/primary/attack.png",
      "width": 32,
      "x": 15,
      "y": 78,
    },
    {
      "align": "center",
      "colour": "gold",
      "font": "small",
      "kind": "text",
      "text": "26",
      "x": 31,
      "y": 112,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/primary/defense.png",
      "width": 32,
      "x": 59,
      "y": 78,
    },
    {
      "align": "center",
      "colour": "gold",
      "font": "small",
      "kind": "text",
      "text": "25",
      "x": 75,
      "y": 112,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/primary/power.png",
      "width": 32,
      "x": 103,
      "y": 78,
    },
    {
      "align": "center",
      "colour": "gold",
      "font": "small",
      "kind": "text",
      "text": "25",
      "x": 119,
      "y": 112,
    },
    {
      "height": 32,
      "kind": "sprite",
      "src": "assets/primary/knowledge.png",
      "width": 32,
      "x": 147,
      "y": 78,
    },
    {
      "align": "center",
      "colour": "gold",
      "font": "small",
      "kind": "text",
      "text": "26",
      "x": 163,
      "y": 112,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/creatures/13.png",
      "width": 24,
      "x": 7,
      "y": 130,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "3",
      "x": 19,
      "y": 156,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/creatures/110.png",
      "width": 24,
      "x": 33,
      "y": 130,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "15",
      "x": 45,
      "y": 156,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/creatures/116.png",
      "width": 24,
      "x": 59,
      "y": 130,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "8",
      "x": 71,
      "y": 156,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/creatures/118.png",
      "width": 24,
      "x": 85,
      "y": 130,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "4",
      "x": 97,
      "y": 156,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/creatures/120.png",
      "width": 24,
      "x": 111,
      "y": 130,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "2",
      "x": 123,
      "y": 156,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/creatures/127.png",
      "width": 24,
      "x": 137,
      "y": 130,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "1",
      "x": 149,
      "y": 156,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/creatures/131.png",
      "width": 24,
      "x": 163,
      "y": 130,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "1",
      "x": 175,
      "y": 156,
    },
  ],
  "width": 194,
}
`;

exports[`town card > matches the expanded layout snapshot, with the mage guild and the open research 1`] = `
{
  "height": 658,
  "ops": [
    {
      "height": 186,
      "kind": "panel",
      "panel": "town",
      "width": 194,
      "x": 0,
      "y": 0,
    },
    {
      "height": 64,
      "kind": "sprite",
      "src": "assets/towns/20.png",
      "width": 58,
      "x": 6,
      "y": 6,
    },
    {
      "align": "left",
      "colour": "yellow",
      "font": "big",
      "kind": "text",
      "maxWidth": 118,
      "text": "New Dolere",
      "x": 70,
      "y": 8,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "medium",
      "kind": "text",
      "maxWidth": 118,
      "text": "Factory",
      "x": 70,
      "y": 34,
    },
    {
      "height": 38,
      "kind": "sprite",
      "src": "assets/ui/hall-3.png",
      "width": 38,
      "x": 70,
      "y": 60,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/creatures/13.png",
      "width": 24,
      "x": 7,
      "y": 130,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "12",
      "x": 19,
      "y": 156,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/creatures/110.png",
      "width": 24,
      "x": 33,
      "y": 130,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "6",
      "x": 45,
      "y": 156,
    },
    {
      "height": 38,
      "kind": "sprite",
      "src": "assets/ui/fort-2.png",
      "width": 38,
      "x": 114,
      "y": 60,
    },
    {
      "height": 472,
      "kind": "panel",
      "panel": "expansion",
      "width": 194,
      "x": 0,
      "y": 186,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Capitol · Castle",
      "x": 16,
      "y": 204,
    },
    {
      "align": "left",
      "colour": "yellow",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Mage Guild level 5",
      "x": 16,
      "y": 222,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Level 1",
      "x": 16,
      "y": 236,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/15.png",
      "width": 48,
      "x": 18,
      "y": 250,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/27.png",
      "width": 48,
      "x": 70,
      "y": 250,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/41.png",
      "width": 48,
      "x": 122,
      "y": 250,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/53.png",
      "width": 48,
      "x": 18,
      "y": 290,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/2.png",
      "width": 48,
      "x": 70,
      "y": 290,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Level 2",
      "x": 16,
      "y": 332,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/16.png",
      "width": 48,
      "x": 18,
      "y": 346,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/43.png",
      "width": 48,
      "x": 70,
      "y": 346,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/46.png",
      "width": 48,
      "x": 122,
      "y": 346,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/49.png",
      "width": 48,
      "x": 18,
      "y": 386,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Level 3",
      "x": 16,
      "y": 428,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/17.png",
      "width": 48,
      "x": 18,
      "y": 442,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/38.png",
      "width": 48,
      "x": 70,
      "y": 442,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/55.png",
      "width": 48,
      "x": 122,
      "y": 442,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Level 4",
      "x": 16,
      "y": 484,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/9.png",
      "width": 48,
      "x": 18,
      "y": 498,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/21.png",
      "width": 48,
      "x": 70,
      "y": 498,
    },
    {
      "colour": "rgba(0, 0, 0, 0.55)",
      "height": 36,
      "kind": "fill",
      "width": 48,
      "x": 70,
      "y": 498,
    },
    {
      "align": "center",
      "colour": "yellow",
      "font": "tiny",
      "kind": "text",
      "text": "?2",
      "x": 94,
      "y": 511,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Level 5",
      "x": 16,
      "y": 540,
    },
    {
      "height": 36,
      "kind": "sprite",
      "src": "assets/spells/26.png",
      "width": 48,
      "x": 18,
      "y": 554,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Research open, 2 roll(s): Fireball",
      "x": 16,
      "y": 596,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Visiting: Kyrre",
      "x": 16,
      "y": 610,
    },
    {
      "align": "left",
      "colour": "grey",
      "font": "small",
      "kind": "text",
      "maxWidth": 162,
      "text": "Click again for the hero",
      "x": 16,
      "y": 624,
    },
  ],
  "width": 194,
}
`;

exports[`town card > matches the layout snapshot 1`] = `
{
  "height": 186,
  "ops": [
    {
      "height": 186,
      "kind": "panel",
      "panel": "town",
      "width": 194,
      "x": 0,
      "y": 0,
    },
    {
      "height": 64,
      "kind": "sprite",
      "src": "assets/towns/20.png",
      "width": 58,
      "x": 6,
      "y": 6,
    },
    {
      "align": "left",
      "colour": "yellow",
      "font": "big",
      "kind": "text",
      "maxWidth": 118,
      "text": "New Dolere",
      "x": 70,
      "y": 8,
    },
    {
      "align": "left",
      "colour": "white",
      "font": "medium",
      "kind": "text",
      "maxWidth": 118,
      "text": "Factory",
      "x": 70,
      "y": 34,
    },
    {
      "height": 38,
      "kind": "sprite",
      "src": "assets/ui/hall-3.png",
      "width": 38,
      "x": 70,
      "y": 60,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/creatures/13.png",
      "width": 24,
      "x": 7,
      "y": 130,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "12",
      "x": 19,
      "y": 156,
    },
    {
      "height": 24,
      "kind": "sprite",
      "src": "assets/creatures/110.png",
      "width": 24,
      "x": 33,
      "y": 130,
    },
    {
      "align": "center",
      "colour": "white",
      "font": "tiny",
      "kind": "text",
      "text": "6",
      "x": 45,
      "y": 156,
    },
    {
      "height": 38,
      "kind": "sprite",
      "src": "assets/ui/fort-2.png",
      "width": 38,
      "x": 114,
      "y": 60,
    },
  ],
  "width": 194,
}
`;
